--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
 								</div>
 								<div class="timeline-body">
 									<p>Working as a UI Developer for internal application
-Developed Application to asses JSON  from Restfull web service from consumer side using JavaScript and Angular.JS
-Developed the front-end web page by using HTML5, CSS3, and JavaScript, taking advantage of the frameworks Angular.JS.
+Developed Application to asses JSON  from Restfull web service from consumer side using JavaScript and Angular
+Developed the front-end web page by using HTML5, CSS3, and JavaScript, taking advantage of the frameworks Angular
 Working with browsers compatibility issues.
 Estimated time to develop for all approved prototypes and the implementation of those prototypes using jQuery and CSS as well as showing to project leads and receiving and implementing any changes or implementation updates
 Responsible for creating the JavaScript code, for different modules.
@@ -343,7 +343,7 @@ JavaScript, JQuery, Angular.JS, CSS, HTML</p>
 					<div class="chart" data-percent="85"><span><strong>MySQL</strong>85%</span></div>
 				</div> -->
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-					<div class="chart" data-percent="90"><span><strong>AngularJS</strong>90%</span></div>
+					<div class="chart" data-percent="90"><span><strong>Angular</strong>60%</span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
 					<div class="chart" data-percent="90"><span><strong>Ionic</strong>60%</span></div>
