--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	<div class="fh5co-loader"></div>
 	
 	<div id="page">	
-	<header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" style="background-image:url(https://scontent.fblr2-1.fna.fbcdn.net/v/t1.0-9/16265702_1045246355581720_6679403082324698293_n.jpg?_nc_cat=108&_nc_ht=scontent.fblr2-1.fna&oh=e2e754528d3faed580d3ccd6977f8af3&oe=5C962814);" data-stellar-background-ratio="0.5">
+	<header id="fh5co-header" class="fh5co-cover js-fullheight" role="banner" style="background-image:url(/img/cover.jpg);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
