--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	<div class="fh5co-loader"></div>
 	
 	<div id="page">	
-	<header id="fh5co-header" style="background-position: center;" class="fh5co-cover js-fullheight" role="banner" style="background-image:url(/img/cover.jpg);" data-stellar-background-ratio="0.5">
+	<header id="fh5co-header" style="background-position: center;" class="fh5co-cover js-fullheight" role="banner" style="background-image:url(img/cover.jpg);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
@@ -584,13 +584,13 @@ JavaScript, JQuery, Angular.JS, CSS, HTML</p>
 	</div>
 
 	<div id="fh5co-consult">
-		<div class="video fh5co-video" style="background-image:url(https://scontent.fblr2-1.fna.fbcdn.net/v/t1.0-9/16265702_1045246355581720_6679403082324698293_n.jpg?_nc_cat=108&_nc_ht=scontent.fblr2-1.fna&oh=e2e754528d3faed580d3ccd6977f8af3&oe=5C962814);">
+		<div class="video fh5co-video" style="background-image:url(img/side.jpeg);">
 			<div class="overlay"></div>
 			
 							<h1 style="text-align: center;
     position: relative;
     top: 20%;
-    color: #fff;"><span><q>Change your life today,Don't gamble on the future,act now,without delay</q></span></h1>
+    color: #000;font-weight:800;font-size:50px;"><span><q>Change your life today,Don't gamble on the future,act now,without delay</q></span></h1>
 		</div>
 		<div class="choose animate-box">
 			<h2>Contact</h2>
