--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	<div class="fh5co-loader"></div>
 	
 	<div id="page">	
-	<header id="fh5co-header" class="fh5co-cover" role="banner"  data-stellar-background-ratio="0.5">
+	<header id="fh5co-header" class="fh5co-cover">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
